--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,6 +4,11 @@ header {
 	text-align: center;
 }
 
+h1 {
+	padding-top: 1em;
+	padding-bottom: 0;
+}
+
 svg {
 	width: 85%;
 	margin: 0 auto;
@@ -12,13 +17,13 @@ svg {
 
 rect, line {
 	fill: none;
-	stroke: #DEDEDE;
+	stroke: #D8D9E1;
 	stroke-width: 1.8px;
 	vector-effect: non-scaling-stroke;
 }
 
 svg text {
 	font-weight: lighter;
-	fill: #D9D9D9;
+	fill: #C4C5CC;
 	word-spacing: 2px;
 }
