--- a/app/harp.kv
+++ b/app/harp.kv
@@ -5,6 +5,10 @@
             rgba: 0.25, 0.31640625, 0.70703125, 1
         Rectangle:
             size: 18.229166667 * root.width / 100, self.height
+    Image:
+        size: (83.770833333 * root.width / 100, 26.074074074 * root.height / 100)
+        source: "images/GDG_logo.png"
+        pos: str(17.25 * root.width / 100) + "dp", str(74 * root.height / 100) + "dp"
     Button:
         background_color: (0.25, 0.31640625, 0.70703125, 1)
         background_normal: ''
@@ -63,9 +67,3 @@
         width: 18.229166667 * root.width / 100
         text: "Harp"
         top: root.top - (16.111111111 * root.height / 100) - 4 * (7.777777778 * root.height / 100)
-
-    Image:
-        height: 24.074074074 * root.height/ 100
-        width: 81.770833333 * root.width / 100
-        source: "images/GDG_logo.png"
-        pos: 18.229166667 * root.width / 100, 100
