add empty stave

--- a/app/harp.kv
+++ b/app/harp.kv
@@ -2,13 +2,18 @@
 <InstrumentsList>:
     canvas.before:
         Color:
+            rgba: 1, 1, 1, 1
+        Rectangle:
+            size: root.width, root.height
+        Color:
             rgba: 0.25, 0.31640625, 0.70703125, 1
         Rectangle:
             size: 18.229166667 * root.width / 100, self.height
     Image:
         size: (83.770833333 * root.width / 100, 26.074074074 * root.height / 100)
         source: "images/GDG_logo.png"
-        pos: str(17.25 * root.width / 100) + "dp", str(74 * root.height / 100) + "dp"
+        pos: str(17.25 * root.width / 100) + "dp", str(74.5 * root.height / 100) + "dp"
+
     Button:
         background_color: (0.25, 0.31640625, 0.70703125, 1)
         background_normal: ''
@@ -67,3 +72,63 @@
         width: 18.229166667 * root.width / 100
         text: "Harp"
         top: root.top - (16.111111111 * root.height / 100) - 4 * (7.777777778 * root.height / 100)
+
+    Image:
+        size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
+        source: "images/notes/empty.png"
+        pos: str(23.5 * root.width / 100) + "dp", str(2 * root.height / 100) + "dp"
+
+    Image:
+        size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
+        source: "images/notes/empty.png"
+        pos: str(29.25 * root.width / 100) + "dp", str(2* root.height / 100) + "dp"
+
+    Image:
+        size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
+        source: "images/notes/empty.png"
+        pos: str(35 * root.width / 100) + "dp", str(2 * root.height / 100) + "dp"
+
+    Image:
+        size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
+        source: "images/notes/empty.png"
+        pos: str(40.75 * root.width / 100) + "dp", str(2* root.height / 100) + "dp"
+
+    Image:
+        size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
+        source: "images/notes/empty.png"
+        pos: str(46.5 * root.width / 100) + "dp", str(2 * root.height / 100) + "dp"
+
+    Image:
+        size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
+        source: "images/notes/empty.png"
+        pos: str(52.25 * root.width / 100) + "dp", str(2* root.height / 100) + "dp"
+
+    Image:
+        size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
+        source: "images/notes/empty.png"
+        pos: str(58 * root.width / 100) + "dp", str(2 * root.height / 100) + "dp"
+
+    Image:
+        size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
+        source: "images/notes/empty.png"
+        pos: str(63.75 * root.width / 100) + "dp", str(2* root.height / 100) + "dp"
+
+    Image:
+        size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
+        source: "images/notes/empty.png"
+        pos: str(69.5 * root.width / 100) + "dp", str(2 * root.height / 100) + "dp"
+
+    Image:
+        size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
+        source: "images/notes/empty.png"
+        pos: str(75.25 * root.width / 100) + "dp", str(2* root.height / 100) + "dp"
+
+    Image:
+        size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
+        source: "images/notes/empty.png"
+        pos: str(81 * root.width / 100) + "dp", str(2 * root.height / 100) + "dp"
+
+    Image:
+        size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
+        source: "images/notes/empty.png"
+        pos: str(86.75 * root.width / 100) + "dp", str(2* root.height / 100) + "dp"
