add rerendering stave on note played

--- a/app/harp.kv
+++ b/app/harp.kv
@@ -1,5 +1,17 @@
 #:kivy 1.9.1
-<InstrumentsList>:
+<Harp>:
+    first_part_of_stave: first_part_of_stave
+    second_part_of_stave: second_part_of_stave
+    third_part_of_stave: third_part_of_stave
+    fourth_part_of_stave: fourth_part_of_stave
+    fifth_part_of_stave: fifth_part_of_stave
+    sixth_part_of_stave: sixth_part_of_stave
+    seventh_part_of_stave: seventh_part_of_stave
+    eighth_part_of_stave: eighth_part_of_stave
+    ninth_part_of_stave: ninth_part_of_stave
+    tenth_part_of_stave: tenth_part_of_stave
+    eleventh_part_of_stave: eleventh_part_of_stave
+    twelfth_part_of_stave: twelfth_part_of_stave
     canvas.before:
         Color:
             rgba: 1, 1, 1, 1
@@ -74,61 +86,73 @@
         top: root.top - (16.111111111 * root.height / 100) - 4 * (7.777777778 * root.height / 100)
 
     Image:
+        id: first_part_of_stave
         size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
         source: "images/notes/empty.png"
         pos: str(23.5 * root.width / 100) + "dp", str(2 * root.height / 100) + "dp"
 
     Image:
+        id: second_part_of_stave
         size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
         source: "images/notes/empty.png"
         pos: str(29.25 * root.width / 100) + "dp", str(2* root.height / 100) + "dp"
 
     Image:
+        id: third_part_of_stave
         size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
         source: "images/notes/empty.png"
         pos: str(35 * root.width / 100) + "dp", str(2 * root.height / 100) + "dp"
 
     Image:
+        id: fourth_part_of_stave
         size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
         source: "images/notes/empty.png"
         pos: str(40.75 * root.width / 100) + "dp", str(2* root.height / 100) + "dp"
 
     Image:
+        id: fifth_part_of_stave
         size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
         source: "images/notes/empty.png"
         pos: str(46.5 * root.width / 100) + "dp", str(2 * root.height / 100) + "dp"
 
     Image:
+        id: sixth_part_of_stave
         size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
         source: "images/notes/empty.png"
         pos: str(52.25 * root.width / 100) + "dp", str(2* root.height / 100) + "dp"
 
     Image:
+        id: seventh_part_of_stave
         size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
         source: "images/notes/empty.png"
         pos: str(58 * root.width / 100) + "dp", str(2 * root.height / 100) + "dp"
 
     Image:
+        id: eighth_part_of_stave
         size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
         source: "images/notes/empty.png"
         pos: str(63.75 * root.width / 100) + "dp", str(2* root.height / 100) + "dp"
 
     Image:
+        id: ninth_part_of_stave
         size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
         source: "images/notes/empty.png"
         pos: str(69.5 * root.width / 100) + "dp", str(2 * root.height / 100) + "dp"
 
     Image:
+        id: tenth_part_of_stave
         size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
         source: "images/notes/empty.png"
         pos: str(75.25 * root.width / 100) + "dp", str(2* root.height / 100) + "dp"
 
     Image:
+        id: eleventh_part_of_stave
         size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
         source: "images/notes/empty.png"
         pos: str(81 * root.width / 100) + "dp", str(2 * root.height / 100) + "dp"
 
     Image:
+        id: twelfth_part_of_stave
         size: (6.770833333 * root.width / 100, 36.388888889 * root.height / 100)
         source: "images/notes/empty.png"
         pos: str(86.75 * root.width / 100) + "dp", str(2* root.height / 100) + "dp"
